# udacity-linear-algebra-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/src/: sample_app.cpp
src/linal/: CMakeLists.txt
src/linal/include/linal/: line.hpp  line2d.hpp  linear_equation.hpp  linear_obj.hpp  linear_system.hpp  plane.hpp  plane3d.hpp  sfinae.hpp  util.hpp  vec.hpp
src/test/: CMakeLists.txt
src/test/src/: line_tests.cpp  linear_equation_tests.cpp  linear_system_tests.cpp  plane_tests.cpp  tests.cpp  util_tests.cpp  vec_tests.cpp
